# violet-plugin-place

./: .gitattributes  .gitignore  CHANGELOG-2026-03-29.md  README.md
plugins/_backup_pre_lylacore_unification/lylacore-native/crates/pyo3-bindings/: Cargo.toml  mkdocs.yml  pyproject.toml  test_bindings.py  test_passphrase_validation.py  test_results.txt
plugins/_backup_pre_lylacore_unification/lylacore-native/crates/soul-crypto/: Cargo.toml
plugins/font-inspector/scripts/rust/: Cargo.toml
plugins/font-inspector/scripts/rust/src/: extractor.rs  lib.rs  main.rs  mcp_server.rs  svg_writer.rs  types.rs  ufo_writer.rs
plugins/lavender-memorysys/: .mcp.json  README.ja.md  README.md  README.zh-CN.md  pyproject.toml  test-violet-integration.py
plugins/lavender-memorysys/.claude-plugin/: plugin.json
plugins/lavender-memorysys/agents/: lavender.md
plugins/lavender-memorysys/commands/: forget.md  recall.md  remember.md
plugins/lavender-memorysys/docs/: AGENT_MIND_SYSTEM_SPEC.md  CONFIGURATION.md  CONFIGURATION.zh-CN.md  COORDINATION_API.md  COORDINATION_USAGE_EXAMPLES.md  HOOKS_API.md  MIND_AWARE_MEMORY.md  QA_REPORT.md  RESEARCH_MULTIMODAL_IMPLEMENTATION.md  RESEARCH_RUST_CORE_DEEP_DIVE.md  RESEARCH_RUST_MEMORY_SYSTEMS.md  RESEARCH_SOUL_PACKAGE_SYSTEMS.md  RESEARCH_TEMPORAL_GRAPHS_RUST.md  VIOLET_INTEGRATION.md  identity-weighted-retrieval.md
plugins/lavender-memorysys/hooks/: hooks.json  run-hook.cmd
plugins/lavender-memorysys/skills/memory-ops/: SKILL.md
plugins/lavender-memorysys/src/: config.py  server.py  session_hook.py
plugins/lavender-memorysys/src/integrations/: __init__.py  violet_bridge.py  violet_hooks.py
plugins/lavender-memorysys/src/memory/: coordination.py  coordination_analytics.py  hybrid_search.py  manager.py  mind_events.py
plugins/lavender-memorysys/src/providers/: __init__.py  base.py  gemini_provider.py  openai_provider.py
plugins/lavender-memorysys/src/storage/: encryption.py  sqlite_store.py
plugins/lavender-memorysys/src/storage/migrations/: 002_schema_v2.sql  003_schema_v3.sql  004_schema_v4.sql  005_schema_v5.sql  006_schema_v6.sql
plugins/lavender-memorysys/tests/: conftest.py  debug_fts5.py  test_coordination_analytics.py  test_coordination_engine.py  test_encryption.py  test_hybrid_search.py  test_identity_weighted_retrieval.py  test_integration.py  test_js_python_bridge.py  test_manager_coordination.py  test_mind_events.py  test_store.py  test_violet_integration.py  validate_bilingual.py
plugins/lylacore/: .gitignore  .mcp.json  AI_CODE_ANTIPATTERNS.md  ARCHITECTURE.md  ARCHITECTURE_v2_PURE_RUST.md  CODING_STYLE_SYNTHESIS.md  Cargo.toml  LYLARCH_SYSTEM_v1.md  MASTER_CODING_PATTERNS.md  README.md  SESSION_PROTOCOL.md
plugins/lylacore-native/: AUDIT_REPORT.md  Cargo.toml  README.md
plugins/lylacore-native/benchmarks/nodejs/: package.json
plugins/lylacore-native/benchmarks/python/: benchmark_coach_engine.py
plugins/lylacore-native/coach-engine/: Cargo.toml
plugins/lylacore-native/coach-engine/benches/: coach_bench.rs
plugins/lylacore-native/coach-engine/tests/: integration_tests.rs  style_application_tests.rs
plugins/lylacore-native/crates/coach-engine/: Cargo.toml
plugins/lylacore-native/crates/coach-engine/tests/: integration_tests.rs
plugins/lylacore-native/crates/napi-bindings/: index.d.ts  index.js  package.json
plugins/lylacore-native/crates/napi-bindings/src/: error.rs
plugins/lylacore-native/crates/napi-bindings/tests/: cross-language.test.js
plugins/lylacore-native/crates/pyo3-bindings/: Cargo.toml  README.md  RELEASE.md  pyproject.toml
plugins/lylacore-native/crates/pyo3-bindings/docs/: index.md
plugins/lylacore-native/crates/pyo3-bindings/src/: error.rs
plugins/lylacore-native/crates/pyo3-bindings/tests/: test_cross_language.py  test_decrypt.py  test_key.py  test_properties.py  test_salt.py
plugins/lylacore-native/crates/soul-crypto/benches/: crypto_bench.rs
plugins/lylacore-native/crates/soul-crypto/src/: lib.rs
plugins/lylacore-native/crates/soul-crypto/tests/: common.rs
plugins/lylacore-native/docs/: PERFORMANCE.md
plugins/lylacore-native/scripts/: analyze_benchmarks.py
plugins/lylacore-native/tests/: TEST_IMPLEMENTATION_REPORT.md  benchmark_nodejs_precise.js  benchmark_overhead.js  test_nodejs_bindings.js
plugins/lylacore-native/tests/compatibility/: coach_engine_compat.test.js  soul_crypto_compat.test.js
plugins/lylacore-native/tests/integration/: concurrency.rs  ffi_types.rs  performance.rs  test_vectors.rs
plugins/lylacore-rust/crates/napi-bindings/: Cargo.toml
plugins/lylacore/.claude-plugin/: plugin.json
plugins/lylacore/.github/workflows/: benchmark.yml  ci.yml  python-bindings.yml  release-npm.yml  release-python.yml
plugins/lylacore/benchmarks/: README.md
plugins/lylacore/crates/lyl-calyx/: Cargo.toml
plugins/lylacore/crates/lyl-calyx/src/: main.rs  security.rs  server.rs
plugins/lylacore/crates/lyl-calyx/tests/: security_tests.rs
plugins/lylacore/crates/lyl-cipher/: Cargo.toml
plugins/lylacore/crates/lyl-cipher/benches/: crypto_bench.rs
plugins/lylacore/crates/lyl-cipher/src/: error.rs  lib.rs  tests.rs
plugins/lylacore/crates/lyl-cipher/tests/: common.rs  encryption_tests.rs  integration_tests.rs  key_derivation_tests.rs
plugins/lylacore/crates/lyl-coach/: Cargo.toml
plugins/lylacore/crates/lyl-coach/benches/: coach_bench.rs
plugins/lylacore/crates/lyl-coach/src/: error.rs  lib.rs  tests.rs
plugins/lylacore/crates/lyl-coach/tests/: integration_tests.rs  style_application_tests.rs
plugins/lylacore/crates/lyl-topo/: Cargo.toml
plugins/lylacore/docs/: API.md  ARCHITECTURE.md  MIGRATION.md
plugins/lylacore/examples/: example-mind.json
plugins/lylacore/skills/lylacore/: SKILL.md
plugins/lylacore/tests/: benchmark_python.py  benchmark_python_precise.py  benchmark_sync_vs_async.js
plugins/lylacore/tests/common/: mod.rs
plugins/lylacore/tests/integration/: concurrency.rs  ffi_errors.rs  ffi_memory.rs  ffi_types.rs  performance.rs  roundtrip.rs  test_vectors.rs
plugins/violet-core/scripts/rust/: Cargo.toml
(+765 files in other folders)
