# Authors: Joysusy & Violet Klaudia 💖
# Lylacore Native (Rust) Workspace - Root Configuration

[workspace]
members = [
    "crates/lyl-calyx",
    "crates/lyl-cipher",
    "crates/lyl-coach",
    "crates/lyl-topo",
]
resolver = "2"

[workspace.package]
version = "0.1.13"
edition = "2024"
authors = ["Joysusy <susy@lissomedev.com>", "Violet Klaudia <violet@lissomedev.com>"]
license = "MIT"
keywords = ["lylacore", "cryptography", "coach-engine", "agent-memory", "ai-agent-memory"]

[workspace.dependencies]
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
