[package]
name = "font-inspector"
version = "1.0.0"
edition = "2021"
authors = ["Violet & Joysusy"]
description = "High-performance font analysis tool with SVG/UFO export"

[[bin]]
name = "font-inspector"
path = "src/main.rs"

[dependencies]
# Font parsing - zero-copy, blazing fast
ttf-parser = "0.21"

# UFO format support
norad = "0.14"

# Bézier curve mathematics
kurbo = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Parallel processing for CJK fonts
rayon = "1.10"

# Progress bar
indicatif = { version = "0.17", features = ["rayon"] }

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
