# Authors: Joysusy & Violet Klaudia 💖
[package]
name = "font-inspector"
version = "2.0.0"
edition = "2021"
authors = ["Violet & Joysusy"]
description = "High-performance font analysis tool with SVG/UFO export and MCP server"

[lib]
name = "font_inspector"
path = "src/lib.rs"

[[bin]]
name = "font-inspector"
path = "src/main.rs"

[[bin]]
name = "font-inspector-mcp"
path = "src/mcp_server.rs"

[dependencies]
ttf-parser = "0.21"
norad = "0.14"
kurbo = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.10"
indicatif = { version = "0.17", features = ["rayon"] }

[dev-dependencies]
tempfile = "3.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
