# Authors: Joysusy & Violet Klaudia 💖
# coach-engine - COACH Protocol Implementation

[package]
name = "coach-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell = "1.20"
regex = "1.12"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "coach_bench"
harness = false
