# Authors: Joysusy & Violet Klaudia 💖
# lyl-topo — Mind Topology Engine (Lylarch C-Layer: Structure)

[package]
name = "lyl-topo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Mind topology engine: schema validation, activation, and soul package management"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonschema = { version = "0.45", default-features = false }
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "test-util"] }
