# Authors: Joysusy & Violet Klaudia 💖

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "lylacore"
version = "0.1.13"
description = "Python bindings for Lylacore (soul-crypto + coach-engine)"
authors = [
    { name = "Joysusy", email = "susy@lissomedev.com" },
    { name = "Violet Klaudia", email = "violet@lissomedev.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cryptography", "coach", "identity", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.98.0",
    "pytest-timeout>=2.2.0",
    "pytest-memray>=1.6.0",
    "pytest-xdist>=3.5.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "lylacore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "memory: marks tests that check memory usage",
    "property: marks property-based tests",
]

[tool.hypothesis]
max_examples = 200
deadline = 5000
derandomize = false

[tool.coverage.run]
source = ["lylacore"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
